codama-macros/tests/codama_attribute/node_directive/type_nodes/number_type_node/invalid_format.fail.stderr
error: invalid format
 --> tests/codama_attribute/node_directive/type_nodes/number_type_node/invalid_format.fail.rs:3:36
  |
3 | #[codama(node(number_type(format = invalid)))]
  |                                    ^^^^^^^
