codama-macros/tests/codama_attribute/node_directive/type_nodes/number_type_node/invalid_format.fail.rs
use codama::codama;

#[codama(node(number_type(format = invalid)))]
pub struct Foo(usize);

fn main() {}
